...
        return Future<Data, Error> { [weak self] promise in
            guard let self = self else { return promise(.failure(NetworkError.unknownError(NSError()))) }
            
            _ = self.restClient.apiRequest(request) { data, response, error in
                if let error = error {
                    promise(.failure(NetworkError.unknownError(error)))
                    return
                }
                
                guard let httpResponse = response as? HTTPURLResponse else {
                    promise(.failure(NetworkError.invalidResponse))
                    return
                }
...
